# state-machines

./: README.md  example.py  pyproject.toml  statemachines.md
statemachine/: __init__.py  cli.py  core.py  plantuml.py
tests/: test_core.py  test_plantuml.py
